--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,8 @@ body{
 	font-size: 20px;
 	text-align: center;	
 }
+
+/*mediaqueries*/
 @media screen and  (max-width: 959px){
 	.container {
 	width:100%;
