Initial project files
This is my portfolio version 2 project in my app academy class. It uses languages such as HTML and CSS to create a website.

--- a/css/main.css
+++ b/css/main.css
@@ -118,20 +118,27 @@ body{
 }
 }
 @media screen and (max-width: 320px){
-.container{
+	.container{
+			width: 320px;
+		}
+	.anime{
+		width: 100%;
+	}
+	.borderlands{
+		width: 100%;
+	}
+	.bass{
+		width: 100%;
+	}
+	#carousel-example-generic{
 		width: 320px;
 	}
-.anime{
-	width: 100%;
-}
-.borderlands{
-	width: 100%;
-}
-.bass{
-	width: 100%;
-}
 }
 
 #carousel-example-generic{
 	width: 1000px;
+}
+.img{
+	width: 800px;
+	height: 500px;
 }
