Initial project files
This is my portfolio version 2 project in my app academy class. It uses languages such as HTML and CSS to create a website.

--- a/css/main.css
+++ b/css/main.css
@@ -125,10 +125,11 @@ body{
 	.container{
 			width: 320px;
 		}
-	.img{
+	/*.img{
 		width: 100em;
 		height: 100em;
-	}
+	}*/
+	
 	#carousel-example-generic{
 	
 	}
